2000-07-02  Bart Schaefer  <schaefer@zsh.org>

	* 12133: Completion/Core/_expand, Completion/Core/_path_files:
	Discard error output from parameter expansions and use "eval" to
	protect the completion system from parse errors and other garbage
	in the strings taken from the command line.

2000-06-29  Sven Wischnowsky  <wischnow@zsh.org>

	* 12125: Src/parse.c, Test/09funcdef.ztst: fix for `foo () print
 	bar' (function definitions without braces)
	
	* 12122: Completion/Core/_main_complete: reverse meaning of yes=num
 	again

	* 12119: Completion/Core/_complete, Completion/Core/_normal: try
 	to return the right value
	
	* 12118: Completion/Core/_expand: don't expand partially typed
 	parameter expansions
	
	* 12115: Completion/Core/_expand, Doc/Zsh/compsys.yo: change
 	suffix style to still do expansion if the suffix contains
 	something to expand
	
	* 12114: Completion/Core/_main_complete, Doc/Zsh/compsys.yo: even
 	more fun with the menu style (no=num, yes=long-list, reverse
 	meaning of yes=num)
	
	* 12113: Completion/Core/_expand, Src/Zle/zle_tricky.c: quote
 	brace-strings
	
2000-06-28  Bart Schaefer  <schaefer@zsh.org>

	* 12112: Src/params.c: Don't make namedirs out of hash elements.

2000-06-28  Sven Wischnowsky  <wischnow@zsh.org>

	* 12109: Completion/Core/_complete: make _complete return the
 	right value
	
	* 12107: Completion/Core/_setup, Src/Zle/complist.c: fix for
 	list-colors handling
	
	* 12105: Completion/Core/_main_complete: reset _comp_mesg (saying
 	whether there were messages) appropriately
	
	* Jan Fedak: 12097: Completion/Use/_ssh: use _ports when
	completing remote ports

	* Andrej: 12094: Doc/Zsh/compsys.yo: a bit of cleanup

	* 12099: Completion/Core/_oldlist: make _oldlist not use the dummy
 	match added for the warning
	
	* 12093: Src/Zle/compcore.c, Src/Zle/complist.c, Src/Zle/compresult.c:
 	make a-a-i-n-h in menu selection work with one match; better undo
 	behaviour for menu selection
	