@@ -1,3 +1,11 @@
+2000-07-03  Sven Wischnowsky  <wischnow@zsh.org>
+
+	* 12134: Completion/Core/_main_complete, Doc/Zsh/compsys.yo,
+ 	Doc/Zsh/mod_complist.yo, Src/Zle/comp.h, Src/Zle/compcore.c,
+ 	Src/Zle/complist.c: change format style with warnings tag, don't
+ 	add descriptions as matches; make a-a-i-n-h in menu selection work
+ 	even without matches
+	
 2000-07-02  Bart Schaefer  <schaefer@zsh.org>
 
 	* 12133: Completion/Core/_expand, Completion/Core/_path_files:
